Headless Chrome now NPM dependency

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "lighthouse": "^1.x"
   },
   "dependencies": {
-    "circular-json": "^0.3.1"
-  }
+    "circular-json": "^0.3.1",
+    "headless-chromium": "0.0.1-prerelease.1"
+  },
+  "keywords": [],
+  "description": ""
 }
