--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "lighthouse": "^1.x"
   },
   "dependencies": {
-    "bson": "1.0.4",
     "circular-json": "^0.3.1",
     "got": "^7.0.0",
     "headless-chromium": "0.0.1-prerelease.1",
-    "mongodb": "^2.2.28"
+    "mongodb": "2.2.28"
   },
   "keywords": [],
   "description": ""
