--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "wta-lighthouse-logger",
   "version": "1.0.0",
+  "engines": {
+    "node": "7.x"
+  }
   "main": "index.js",
   "author": "two7sclash <james.fishwick@willowtreeapps.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js",
-    "connect": "node app.js"
-  },
+    "start": "node index.js"
+    },
   "devDependencies": {
-    "eslint": "^3.19.0",
-    "lighthouse": "^1.x"
+    "eslint": "^3.19.0"
   },
   "dependencies": {
+    "lighthouse": "^1.x",
     "got": "^7.0.0",
     "headless-chromium": "0.0.1-prerelease.1",
     "mongodb": "2.2.28"
