--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "dependencies": {
     "chrome-launcher": "0.1.3",
+    "dotenv": "4.0.0",
     "eslint-plugin-async-await": "0.0.0",
     "got": "^7.0.0",
     "lighthouse": "1.6.5",
     "metaviewport-parser": "0.0.1",
-    "mongodb": "2.2.28"
+    "mongodb": "2.2.28",
+    "shelljs": "0.7.8"
   },
   "keywords": [],
   "description": ""
