--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "wta-lighthouse-logger",
-  "version": "1.0.0",
-  "engines": {
-    "node": "7.x"
-  },
-  "main": "index.js",
-  "author": "two7sclash <james.fishwick@willowtreeapps.com>",
-  "license": "MIT",
-  "scripts": {
-    "start": "node index.js",
-    "build": "babel src/ -d lib/",
-    "prepublish": "yarn run build"
-  },
-  "devDependencies": {
-    "eslint": "^3.19.0"
-  },
-  "dependencies": {
-    "chrome-launcher": "0.1.3",
-    "dotenv": "4.0.0",
-    "eslint-plugin-async-await": "0.0.0",
-    "got": "^7.0.0",
-    "lighthouse": "1.6.5",
-    "metaviewport-parser": "0.0.1",
-    "mongodb": "2.2.28",
-    "shelljs": "0.7.8"
-  },
-  "keywords": [],
-  "description": ""
+    "name": "wta-lighthouse-logger",
+    "version": "1.0.0",
+    "engines": {
+        "node": "8.x"
+    },
+    "main": "index.js",
+    "author": "two7sclash <james.fishwick@willowtreeapps.com>",
+    "license": "MIT",
+    "scripts": {
+        "start": "node index.js"
+    },
+    "devDependencies": {
+        "eslint": "^3.19.0"
+    },
+    "dependencies": {
+        "chrome-launcher": "0.1.3",
+        "dotenv": "4.0.0",
+        "got": "7.1.0",
+        "lighthouse": "1.6.5",
+        "metaviewport-parser": "0.0.1",
+        "moment": "2.18.1",
+        "mongodb": "2.2.28"
+    },
+    "keywords": [],
+    "description": ""
 }
